@@ -1,3 +1,4 @@
-set MAVEN_OPTS=-Xms256m -Xmx1024m -XX:MaxPermSize=128m
-rem -Djetty.port=80
+set JAVA_OPTS=-Xms512m -Xmx2048m -XX:PermSize=128m -XX:MaxPermSize=256m
+set MAVEN_OPTS=-Xms512m -Xmx2048m -XX:PermSize=128m -XX:MaxPermSize=256m
+rem -Djetty.port=8080
 mvn jetty:run -DskipTests=true -DskipITs=true
